# WORLD_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
.github/workflows/: test.yml
src/: lib.rs  options.rs  signal_analyzer.rs  spectrogram_like.rs  synthesis.rs
world_sys/: Cargo.toml  build.rs
world_sys/src/: lib.rs
