[package]
name = "world"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "world_sys",
]
default-members = [
    ".",
    "world_sys",
]

[dependencies]
once_cell = "1.19.0"
world_sys = { path = "./world_sys" }
